# Games101

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
Assignment0/: CMakeLists.txt
Assignment0/source/: main.cpp
Assignment1/: CMakeLists.txt
Assignment1/source/: main.cpp
Assignment2/: CMakeLists.txt
Assignment2/include/: Triangle.hpp  rasterizer.hpp
Assignment2/source/: Triangle.cpp  main.cpp  rasterizer.cpp
Assignment3/: CMakeLists.txt
Assignment3/include/: Shader.hpp  Texture.hpp  rasterizer.hpp
Assignment3/source/: Texture.cpp  Triangle.cpp  main.cpp  rasterizer.cpp
Assignment4/: CMakeLists.txt
Assignment4/source/: main.cpp
Assignment5/: CMakeLists.txt  binary.ppm
Assignment5/include/: Triangle.hpp
Assignment5/source/: Renderer.cpp  main.cpp
Assignment6/: CMakeLists.txt
Assignment6/include/: BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp
Assignment6/source/: BVH.cpp  Renderer.cpp  Scene.cpp  main.cpp
Assignment7/: CMakeLists.txt  binary_ssp16.ppm
Assignment7/include/: Bounds3.hpp  Material.hpp  Object.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  TaskQueue.hpp  Triangle.hpp
Assignment7/source/: BVH.cpp  Renderer.cpp  Scene.cpp  main.cpp
Assignment8/: CMakeLists.txt
Assignment8/CGL/: CMakeLists.txt
Assignment8/CGL/src/: CMakeLists.txt
Assignment8/src/: CMakeLists.txt  application.cpp  application.h  main.cpp  mass.h  rope.cpp  rope.h  spring.h
